run some experiments and write report

--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -94,3 +94,64 @@
   pages={12873--12883},
   year={2021}
 }
+
+@misc{vaswani2017attention,
+      title={Attention Is All You Need}, 
+      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+      year={2017},
+      eprint={1706.03762},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@article{doi:10.1021/ci00007a012,
+  author = {Dalby, Arthur and Nourse, James G. and Hounshell, W. Douglas and Gushurst, Ann K. I. and Grier, David L. and Leland, Burton A. and Laufer, John},
+  title = {Description of several chemical structure file formats used by computer programs developed at Molecular Design Limited},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  volume = {32},
+  number = {3},
+  pages = {244-255},
+  year = {1992},
+  doi = {10.1021/ci00007a012},
+  URL = {https://doi.org/10.1021/ci00007a012},
+  eprint = {https://doi.org/10.1021/ci00007a012}
+}
+
+@incollection{ketkar2017introduction,
+  title={Introduction to deep learning},
+  author={Ketkar, Nikhil},
+  booktitle={Deep learning with Python},
+  pages={1--5},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={Ieee}
+}
+
+@article{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  journal={Advances in neural information processing systems},
+  volume={25},
+  year={2012}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1409.1556,
+  doi = {10.48550/ARXIV.1409.1556},
+  url = {https://arxiv.org/abs/1409.1556},
+  author = {Simonyan, Karen and Zisserman, Andrew},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  publisher = {arXiv},
+  year = {2014},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
