--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -111,3 +111,36 @@
   url = {https://ml.berkeley.edu/blog/posts/vq-vae/},
   urldate = {2022-06-04}
 }
+
+@online{transformers,
+  title = {How Transformers Work},
+  author = "Giuliano Giacaglia",
+  url = {https://towardsdatascience.com/transformers-141e32e69591},
+  urldate = {2022-06-04}
+}
+
+@online{self-attention,
+  title = {Illustrated: Self-Attention},
+  author = "Raimi Karim",
+  url = {https://towardsdatascience.com/illustrated-self-attention-2d627e33b20a},
+  urldate = {2022-06-04}
+}
+
+@online{pytorch-doc,
+  title = {Pytorch documentation},
+  url = {https://pytorch.org/docs/stable/index.html},
+  urldate = {2022-06-04}
+}
+
+@online{imgaug,
+  title = {Imgaug documentation},
+  url = {https://imgaug.readthedocs.io/en/latest/},
+  urldate = {2022-06-04}
+}
+
+@online{crossentropyloss,
+  title = {Cross-Entropy Loss Function},
+  author = {Kiprono Elijah Koech},
+  url = {https://towardsdatascience.com/cross-entropy-loss-function-f38c4ec8643e},
+  urldate = {2022-06-23}
+}
