--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -298,7 +298,7 @@
     "                      iaa.Fliplr(0.2),\n",
     "                      iaa.Flipud(0.2),\n",
     "                      iaa.Sometimes(0.7, iaa.ElasticTransformation(alpha=(0.75,3), sigma=(0.2, 0.5))),\n",
-    "                      iaa.OneOf([\n",
+    "                      iaa.OneOf(\n",
     "                          iaa.Sharpen(alpha=(0,1), lightness=(0.5, 1.5)),\n",
     "                          iaa.Emboss(alpha=(0,1), strength=(0.75, 2))\n",
     "                      ]),\n",
